<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.ithome11.jetpackmvvmdemo.main.s01.Stage01ViewModel" />
        <!--android android:visibility 會用到-->
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".e01.E01Activity">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toStartOf="@+id/til_right"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_left"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="Left"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:text="@={viewModel.left}"
                    android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/til_left"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_right"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="Right"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:text="@={viewModel.right}"
                    android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_clear"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="104dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:onClick="@{_ -> viewModel.clear()}"
                android:text="clear"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/bt_plus"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_plus"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:onClick="@{_ -> viewModel.plus()}"
                android:text="plus"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/bt_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_clear"
                app:layout_constraintTop_toTopOf="@+id/bt_clear"
                app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@{@string/stage01_result_format(viewModel.left, viewModel.right, viewModel.result)}"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="@{viewModel.visibleResult ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_plus" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>