<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.ithome11.jetpackmvvmdemo.main.s03.S03ViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".e03.E03Activity">

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/bt_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:src="@android:drawable/ic_menu_add"
                android:onClick="@{_ -> viewModel.add()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_content_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:imeOptions="actionNext"
                android:lines="1"
                android:singleLine="true"
                android:text="@={viewModel.newContent}"
                app:layout_constraintEnd_toStartOf="@+id/bt_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_contents"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                tools:listitem="@layout/listitem_s03"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_content_new" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>